CFLAGS=-O3 $(OPENMP_CFLAGS) -DVERSION=\"$(VERSION)\" -DPROG="\"$(PACKAGE)\""
AM_CXXFLAGS=$(CFLAGS)
AM_LDFLAGS=$(OPENMP_CFLAGS)

bin_PROGRAMS = letters bench xor iris wdbc
letters_SOURCES = \
	main.cpp \
	Individual.h \
	Individual.cpp \
	NeuralNetwork.h \
	NeuralNetwork.cpp \
	Neuron.h \
	Neuron.cpp \
	Phenotype.h \
	Phenotype.cpp \
	PopulationEvolver.h \
	PopulationEvolver.cpp \
	utilities.h \
	utilities.cpp
bench_SOURCES = \
	bench.cpp \
	Individual.h \
	Individual.cpp \
	NeuralNetwork.h \
	NeuralNetwork.cpp \
	Neuron.h \
	Neuron.cpp \
	Phenotype.h \
	Phenotype.cpp \
	PopulationEvolver.h \
	PopulationEvolver.cpp \
	utilities.h \
	utilities.cpp
xor_SOURCES = \
	xor.cpp \
	Individual.h \
	Individual.cpp \
	NeuralNetwork.h \
	NeuralNetwork.cpp \
	Neuron.h \
	Neuron.cpp \
	Phenotype.h \
	Phenotype.cpp \
	PopulationEvolver.h \
	PopulationEvolver.cpp \
	utilities.h \
	utilities.cpp
iris_SOURCES = \
	iris.cpp \
	Individual.h \
	Individual.cpp \
	NeuralNetwork.h \
	NeuralNetwork.cpp \
	Neuron.h \
	Neuron.cpp \
	Phenotype.h \
	Phenotype.cpp \
	PopulationEvolver.h \
	PopulationEvolver.cpp \
	utilities.h \
	utilities.cpp
wdbc_SOURCES = \
	wdbc.cpp \
	Individual.h \
	Individual.cpp \
	NeuralNetwork.h \
	NeuralNetwork.cpp \
	Neuron.h \
	Neuron.cpp \
	Phenotype.h \
	Phenotype.cpp \
	PopulationEvolver.h \
	PopulationEvolver.cpp \
	utilities.h \
	utilities.cpp